RESOLVED FIXED Bug 151961
Modern IDB: storage/indexeddb/cursor-continue-validity.html fails
https://bugs.webkit.org/show_bug.cgi?id=151961
Summary Modern IDB: storage/indexeddb/cursor-continue-validity.html fails
Brady Eidson
Reported 2015-12-07 13:39:15 PST
Modern IDB: storage/indexeddb/cursor-continue-validity.html fails When an index cursor's iterator was invalidated, there were some cases where it did not correctly find the next iterator to pick up where it left off.
Attachments
Patch v1 (6.88 KB, patch)
2015-12-07 14:07 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2015-12-07 14:07:06 PST
Created attachment 266811 [details] Patch v1
WebKit Commit Bot
Comment 2 2015-12-07 15:07:22 PST
Comment on attachment 266811 [details] Patch v1 Clearing flags on attachment: 266811 Committed r193657: <http://trac.webkit.org/changeset/193657>
WebKit Commit Bot
Comment 3 2015-12-07 15:07:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.